[gd_scene load_steps=2 format=3 uid="uid://d3yf2bqa3dp4k"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ew77f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ew77f")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -33.0
offset_right = 33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="HelpButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Help"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ConfigButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Configuration"
